--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
-    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.2.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
