--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flip-move": "^3.0.5",
     "react-number-format": "^5.2.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
